# kilo

./: .clang-format  .clang-tidy  .cmake-format.json  .cmake-format.yaml  .gitignore  .local_vimrc.vim  CMakeLists.txt  CMakePresets.json  Makefile  config.h.cin  kilo.c  premake5.lua
modules/kilo/: CMakeLists.txt
modules/kilo/src/: kilo.c
src/: main.c
